# Leaflet

./: .flutter-plugins-dependencies  .gitignore  0001-notes-Fullscreen-time.patch  AppImageBuilder.yml  LICENSE  README.md  analysis_options.yaml  crowdin.yml  justfile  notes.sqlite  pubspec.yaml
.github/workflows/: pr_test.yml
android/: .project  build.gradle  gradle.properties  key.properties  local.properties
android/app/: .project  build.gradle  key.jks  proguard-rules.pro
assets/data/: preferences.json
docs/: how-it-works.md  how-to-build.md
ios/Flutter/: Generated.xcconfig  (+1 more)
lib/: bridge_generated.dart  ffi.dart  generated_plugin_registrant.dart  locator.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
locales/: en-US.xml
macos/: libwebcrypto.dylib
native/: Cargo.toml  rustfmt.toml
native/.cargo/: config.toml
native/native.xcodeproj/: project.pbxproj
native/native.xcodeproj/xcuserdata/akshitgarg.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: api.rs  bridge_generated.rs
patches/: 0001-notes-INCOMPLETE-Add-drawing-support.patch  0001-notes-INCOMPLETE-Folder-support.patch  0001-notes-INCOMPLETE-master-pass-validation-prompt.patch  0001-notes-Introducing-Accounts.patch  0001-notes-idk.patch  0002-notes-Preparing-for-offline-multiple-accounts.patch  0003-notes-Implement-welcome-page-db-preferences.patch
scripts/: gen.ps1  gen.sh
test/: widget_test.dart
themes/: black.toml  dark.toml  light.toml  monet_dark.toml  monet_light.toml
web/: index.html  manifest.json  styles.css
windows/: .gitignore  CMakeLists.txt
(+569 files in other folders)
