[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
flutter_rust_bridge = "1"
ring = "0.16.20"

# Release builds
[profile.release]
strip = "debuginfo"
lto = true
opt-level = 3
debug = 0
